Added yaml file for swagger and generated controllers(each controller implements corresponding inteface)
